--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -28,7 +29,6 @@
     "razorpay": "^2.9.5",
     "react-razorpay": "^3.0.1",
     "redis": "^4.7.0",
-    "winston": "^3.17.0",
-    "yahoo-finance2": "^2.13.2"
+    "winston": "^3.17.0"
   }
 }
